--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,16 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
-
-[packages]
-gunicorn = "*"
 
 [dev-packages]
+awsebcli = "*"
+
+[packages]
+numpy = "*"
+scikit-learn = "*"
+flask = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
